updated doxygen documentation for branch: master

--- a/doc/doc_master/man/man3/CutClass.hh.3
+++ b/doc/doc_master/man/man3/CutClass.hh.3
@@ -1,4 +1,4 @@
-.TH "CutClass.hh" 3 "Fri Jan 30 2015" "RPV-LFV-Analyzer" \" -*- nroff -*-
+.TH "CutClass.hh" 3 "Wed Feb 4 2015" "RPV-LFV-Analyzer" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -6,6 +6,9 @@ CutClass.hh \-
 .SH SYNOPSIS
 .br
 .PP
+\fC#include <string>\fP
+.br
+
 .SS "Classes"
 
 .in +1c
