--- a/doc/doc_master/man/man3/specialAna.hh.3
+++ b/doc/doc_master/man/man3/specialAna.hh.3
@@ -1,4 +1,4 @@
-.TH "specialAna.hh" 3 "Fri Jan 30 2015" "RPV-LFV-Analyzer" \" -*- nroff -*-
+.TH "specialAna.hh" 3 "Wed Feb 4 2015" "RPV-LFV-Analyzer" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -13,6 +13,10 @@ specialAna.hh \-
 \fC#include <unordered_set>\fP
 .br
 \fC#include <fstream>\fP
+.br
+\fC#include <map>\fP
+.br
+\fC#include <vector>\fP
 .br
 \fC#include 'Pxl/Pxl/interface/pxl/core\&.hh'\fP
 .br
@@ -30,8 +34,6 @@ specialAna.hh \-
 .br
 \fC#include 'TLorentzVector\&.h'\fP
 .br
-\fC#include 'TEfficiency\&.h'\fP
-.br
 \fC#include <TFile\&.h>\fP
 .br
 \fC#include 'Main/Systematics\&.hh'\fP
@@ -45,6 +47,7 @@ specialAna.hh \-
 .ti -1c
 .RI "class \fBspecialAna\fP"
 .br
+.RI "\fIclean up the header!!! \fP"
 .in -1c
 .SH "Author"
 .PP 
